# trash-bot-kun

./: LICENSE  README.md  main.py  pyproject.toml  slack-api-test.py  trash-bot-kun.py
.github/workflows/: ci.yaml  cron.yaml
