[tool.poetry]
name = "trash-bot-kun"
version = "0.1.0"
description = ""
authors = ["nakamina <n.mina10.0608gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.21.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
